# Pweb

./: .dockerignore  .gitignore  CRAWLAB_LOCAL.md  README.md  docker-compose.crawlab.yml  pyproject.toml  requirements.txt
docker/api/: Dockerfile
docker/crawlab/: Dockerfile
docker/web/: Dockerfile
docs/: 离职交接文档.md  项目交接清单.md
src/tender_poc/: __init__.py  __main__.py  attachments.py  cli.py  models.py  paths.py  storage.py  web_api.py
src/tender_poc/screening/: __init__.py  spring.py
src/tender_poc/spiders/: __init__.py  base.py  cec.py  chnenergy.py  crrc.py  ggzy.py  html_utils.py  sdic.py
tests/: test_attachment_parsing.py  test_spring_screening.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css  types.ts
