[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tender-poc"
version = "0.1.0"
description = "Tender notice collection POC"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32,<3",
  "beautifulsoup4>=4.12,<5",
  "pydantic>=2.7,<3",
  "python-dateutil>=2.9,<3",
  "typer>=0.12,<1",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "openpyxl>=3.1,<4",
  "xlrd>=2,<3",
  "xlwt>=1.3,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
